--- a/lambda1/templates/index.html
+++ b/lambda1/templates/index.html
@@ -16,8 +16,21 @@
   </div>
 </div>
 
+  {% for train_num, arrival_data in arrivals.items() %}
+  <div class="row align-items-center">
+    <div class="container-fluid text-responsive">  
+      <div class="row row-cols-3">
+        <div class="col-3 text-center">{{ train_num }}</div>
+        <div class="col-5">{{ arrival_data.destination }} </div>
+        <div class="col-4">{% autoescape false %} {{ arrival_data.eta }}{% endautoescape %}</div>
+      </div> 
+    </div>
+  </div>
+  {% endfor %}
 
-  {% for arrival in arrivals %}
+
+
+  <!-- {% for arrival in arrivals %}
     <div class="row align-items-center">
 
         {% if arrival.occupancy == "LIGHT" %}
@@ -37,6 +50,6 @@
         </div> 
       </div>
     </div>
-  {% endfor %}
+  {% endfor %} -->
 
 {% endblock %}
