--- a/lambda1/templates/index.html
+++ b/lambda1/templates/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="row align-items-center">
-  <div class="container-fluid text-responsive text-muted ">
+  <div class="container-fluid text-responsive ">
     <div class="row row-cols-3">
       <div class="col-12 text-center">
         {{ station_name }}
@@ -20,9 +20,9 @@
   <div class="row align-items-center">
     <div class="container-fluid text-responsive">  
       <div class="row row-cols-3">
-        <div class="col-3 text-center">{{ train_num }}</div>
-        <div class="col-5">{{ arrival_data.destination }} </div>
-        <div class="col-4">{% autoescape false %} {{ arrival_data.eta }}{% endautoescape %}</div>
+        <div class="col-3 text-right text-muted">{{ train_num }}</div>
+        <div class="col-5 text-muted text-info">{{ arrival_data.destination }} </div>
+        <div class="col-4 text-danger">{% autoescape false %} {{ arrival_data.eta }}{% endautoescape %}</div>
       </div> 
     </div>
   </div>
