added font_size query arg

--- a/lambda1/templates/base.html
+++ b/lambda1/templates/base.html
@@ -17,7 +17,7 @@
 
             <!--TODO: this renders as /$default/css/mystyle.css when running in Lambda. hard-code works but would be good to fix it -->
             <!-- <link rel="stylesheet" href="{{url_for('static', filename='mystyle.css')}}"> -->
-            <link rel="stylesheet" href="css/mystyle.css">
+            <!-- <link rel="stylesheet" href="css/mystyle.css"> -->
 
         {% endblock %}
 
