--- a/lambda1/templates/index.html
+++ b/lambda1/templates/index.html
@@ -3,6 +3,9 @@
 {% block head %}
   {{ super() }}
   <title>NJTransit TrainWatcher 1.0</title>
+
+{{ inline_style | safe}}
+
 {% endblock %}
 {% block content %}
 
